# homework

./: .gitignore  CMakeLists.txt  README.md  TODO
bachelor/cita/: 8254.ASM  8255_LED.ASM  8255_static_led.asm  8259.asm  9999.ASM.ASM  AD.ASM  asm_8255.asm  da.asm  mfts.asm  sin.asm
bachelor/mlcm/: LICENSE  README.md  TODO
bachelor/mlcm/core/include/: debug.h  help.h
bachelor/mlcm/core/src/: mlcm_init.c  raid0.c  raid1.c  raid2.c  raid5.c
bachelor/mlcm/src/: mlcm_deinit.c  mlcm_read.c
bachelor/xyas/: README.txt
bachelor/xyas/3part/sqlite/lib32/: libsqlite3.lai  libsqlite3.so.0.8.6  sqlite3
bachelor/xyas/src/: CMakeLists.txt
bachelor/xyas/src/client/: client.c
bachelor/xyas/src/include/: create_window.h  debug.h  xyas.h  xyas_sqlite.h  xyas_sqlite_ctrl.h
bachelor/xyas/src/server/: server.c
bachelor/xyas/src/storage/: xyas_delete_sqlite.c  xyas_init_sqlite.c  xyas_insert_sqlite.c  xyas_search_sqlite.c
bachelor/xyas/src/storage/unittest/: CMakeLists.txt  test.c
bachelor/xyas/test/: CMakeLists.txt  client.c  server.c  test.c  test1.c
master/: a3.py
master/mcmr/: CHANGELOG  Makefile  README.md  action.h  mcmr.c  mcmr.h  mcmr_action.c  mcmr_helper.c  mcmr_helper.h
master/mcmr/doc/: Makefile  mcmr.tex  ref.bib
master/mcmr/doc/figure/: coffee_machine.eps
master/netcos/: INSTALL  README  fabfile.py  setup.py
master/netcos/doc/: HOWTO
master/netcos/netcos/: __init__.py  constants.py  netutils.py  pathutils.py
master/netcos/netcos/client/: ncs_cluster.py  ncs_node.py
master/netcos/netcos/server/: __init__.py  masterd.py  noded.py
master/netcos/netcos/tools/: ncs-cluster  ncs-node
master/netcos/netcos/utils/: NodeHelp.py  cluster_help.py  io.py  log.py  nodesetup.py
master/python/: README  a3.py  a3_support.py
mlcm/include/: debug.h  mlcm.h  raid.h
mlcm/src/: mlcm_init.c  mlcm_write.c  protocol.c  raid.c  raid3.c  raid4.c  raid6.c
phd/cs634/: apriori.py  bestbuy.txt  bj.txt  cosco.txt  shoprite.txt  walmart.txt
phd/cs680/: hw1.c  test.c
phd/cs680/hw1/: Makefile  hw1.c
phd/cs680/hw10/: CS680_homework10_WeiweiJia_31397954.tar  Makefile  README.txt  hw10.c
phd/cs680/hw2/: CS680_homework2_WeiweiJia_31397954.tar  hello-1.c  hello-2.c  hello-3.c  install_lxr.sh  run_modules.sh
phd/cs680/hw3/: CS680_homework3_WeiweiJia_31397954.diff  CS680_homework3_WeiweiJia_31397954.tar  CompInsKer.sh
phd/cs680/hw4/: CS680_homework4_WeiweiJia_31397954.diff  CS680_homework4_WeiweiJia_31397954.tar  dmesg
phd/cs680/hw5/: CS680_homework5_WeiweiJia_31397954.diff  dmesg
phd/cs680/hw6/: CS680_homework6_WeiweiJia_31397954.diff  CS680_homework6_WeiweiJia_31397954.tar  README  dmesg  ps
phd/cs680/hw7/: CS680_homework7_WeiweiJia_31397954.diff  dmesg
phd/cs680/hw8/: Makefile  hook8.c  test
phd/cs680/hw9/: CS680_homework9_WeiweiJia_31397954.diff  CS680_homework9_WeiweiJia_31397954.tar  README.txt
phd/cs680/test1/: p1.c
